--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ env:
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
-    environment: DEV
+    environment: testing
     env: 
       MONGODB_CLUSTER_ADDRESS: cluster0.gty2z4d.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
