--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deployment
 on:
-  workflow_dispatch
-  push:
-    branches:
-      - master
-      - dev
+  - workflow_dispatch
+  - push:
+      branches:
+        - master
+        - dev
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
