--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,5 @@
 name: Deployment
-on:
-  - workflow_dispatch
-  - push:
-      branches:
-        - master
-        - dev
+on: workflow_dispatch
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
