--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,9 @@
 name: Deployment
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
+      - dev
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
